feat:新增修改提醒时间的命令，修改README文档

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "commands": [{
       "command": "reminder.setUserName",
       "title": "setUserName"
+    },{
+      "command": "reminder.setReminderTime",
+      "title": "setReminderTime"
     }]
   },
   "scripts": {
