--- a/package.json
+++ b/package.json
@@ -110,7 +110,8 @@
         "vscode:prepublish": "webpack --mode production",
         "compile": "webpack --mode none",
         "watch": "webpack --mode none --watch",
-        "build": "vsce package patch"
+        "build": "vsce package",
+        "build:patch": "vsce package patch"
     },
     "devDependencies": {
         "vsce": "^2.15.0",
