feat:name repeat err

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "kit-ffgz",
-    "displayName": "kit-ffgz",
+    "name": "kits-ffgz",
+    "displayName": "kits-ffgz",
     "publisher": "ffgz",
     "description": "this is a kit",
     "repository": {
